--- a/app/views/dashboard/integration.html.erb
+++ b/app/views/dashboard/integration.html.erb
@@ -5,7 +5,7 @@
       <p class="description">Unless set, Kakuteru uses a generic Kakuteru forum on <%= link_to('Disqus.com', 'http://disqus.com/') %> to provide comments. You can however set your own unique forum identifier here.</p>
       <p><label for="disqus_forum_identifier" title="If set, will be used to provide commenting by Disqus.com">Forum identifier: </label><%= text_field(:stream, :disqus_forum_identifier) %></p>
       <h2>FeedBurner feed</h2>
-      <p class="description"><%= link_to('FeedBurner', 'http://feedburner.com/') %> is a way of keeping track of feed subscriptions and providing some extra SEO. Please make sure to set <%= link_to("#{@stream.blog_url}/articles.atom", "#{@stream.blog_url}/articles.atom") %> as the origin feed.</p>
+      <p class="description"><%= link_to('FeedBurner', 'http://feedburner.com/') %> is a way of keeping track of feed subscriptions and providing some extra SEO. Please make sure to set <%= link_to("#{@stream.blog_url}articles.atom", "#{@stream.blog_url}articles.atom") %> as the origin feed.</p>
       <p><label for="feedburner_feed_url" title="Make sure to set /articles.atom as your FeedBurner source!">Feed URL: </label><%= text_field(:stream, :feedburner_feed_url, :class => 'url') %></p>     
       <h2>Dopplr travel schedule</h2>
       <p class="description"><%= link_to('Dopplr', 'http://dopplr.com/') %> allows you to share your travel schedule. On your Dopplr dashboard you can find an iCal URL for integration. This gets updated once a day, so it might take a while for them to show :]</p>
