--- a/app/views/streams/show.html.erb
+++ b/app/views/streams/show.html.erb
@@ -47,7 +47,7 @@
         %>
         <li><%= link_to("#{image_tag(service.icon_url)} #{service.name}", service.profile_url, :rel => 'me') %></li>
       <% end %>
-      <li><%= link_to("#{image_tag('google.gif')} Google", "http://google.com?q=#{CGI.escape(@stream.author.to_s)}") %></li>
+      <li><%= link_to("#{image_tag('google.gif')} Google", "http://google.com/search?q=#{CGI.escape(@stream.author.to_s)}") %></li>
     </ul>
   </div>
   
