--- a/app/views/posts/_list_article.html.erb
+++ b/app/views/posts/_list_article.html.erb
@@ -1,6 +1,6 @@
 <li>
   <span class="actions">
-    <%= link_to('view on blog', read_url(:id => list_article), :class => 'view') %> · 
+    <%= link_to('view public', read_url(:id => list_article), :class => 'view') %> · 
     <%= link_to('delete', delete_post_url(:id => list_article), :class => 'delete', :confirm => 'Are you sure to delete this article?') %>
   </span>
   <span class="caption"><%= link_to(list_article.caption, edit_post_url(:id => list_article), :class => 'edit', :title => 'Edit!', :alt => 'Edit!') %></span>
