--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -264,6 +264,26 @@ div.formError {
 
 /* Stream */
 
+.inplaceeditor-form {
+	margin-bottom: 20px;
+}
+
+.inplaceeditor-form input[type="text"] {
+	float: left;
+	margin-right: 15px;
+}
+
+.inplaceeditor-form .editor_ok_button {
+	float: left;
+	margin-right: 15px;
+	margin-bottom: 10px;
+	margin-top: 3px;
+}
+
+.inplaceeditor-form .editor_cancel_link {
+	display: block;
+	padding-top: 8px;
+}
 
 .stream {
 	width: 500;
@@ -274,6 +294,7 @@ div.formError {
 .stream li {
 	border-bottom: 1px dashed #999;
 	padding: 15px 5px;
+	clear: both;
 }
 
 .stream li:hover {
