--- a/app/views/design/index.html.erb
+++ b/app/views/design/index.html.erb
@@ -3,7 +3,16 @@
   <% form_tag do %>
     <h2>Custom CSS</h2>
     <p class="description">More ways of styling your stream will come soon. For now, you have full control over your CSS. You can use <%= link_to('Content Settings', '/dashboard/content') %> to insert additional markup and Javascript.</p>
+    <div class="style_guide">
+      <p>All lifestream updates are categorized using the following CSS classes:</p>
+      <ul>
+        <% Service::TYPES.values.uniq.each do |type| %>
+          <li><%= type %></li>
+        <% end %>
+      </ul>
+      <p>We'd like to enable you to customize your lifestream as much as possible, so please <%= link_to('let us know', "mailto: kakuteru_design@dominiek.com") %> if you need any extra data or content functionality.</p>
+    </div>
     <%= text_area(:stream, :css, :class => 'body') %>
-    <%= submit_tag('save')%>
+    <%= submit_tag_with_notice('save')%>
   <% end %>
 </div>
