Forgot password facility + test the fuck out of it. Also added a login panel on main page.

--- a/app/views/dashboard/login.html.erb
+++ b/app/views/dashboard/login.html.erb
@@ -3,12 +3,13 @@
   <% unless @stream.password %>
     <h2>Set a password</h2>
   <% else %>
-    <h2>Open Sesame</h2>
+    <h2>Login to your dashboard</h2>
   <% end %>
 
   <% form_tag do %>
     <%= error_message_on(@stream, :password) %>
     <%= password_field_tag(:password) %>
     <%= submit_tag('Remember me!') %>
+    <%= link_to('I lost my password', {:action => :forgot_password}, :class => 'forgot_password') %>
   <% end %>
 </div>
