--- a/app/views/design/index.html.erb
+++ b/app/views/design/index.html.erb
@@ -10,7 +10,7 @@
           <li><%= type %></li>
         <% end %>
       </ul>
-      <p>We'd like to enable you to customize your lifestream as much as possible, so please <%= link_to('let us know', "mailto: kakuteru_design@dominiek.com") %> if you need any extra data or content functionality.</p>
+      <p>We'd like to enable you to customize your lifestream as much as possible, so please <%= link_to('let us know', "mailto: kakuteru_design@dominiek.com") %> if you need any extra data, content or functionality.</p>
     </div>
     <%= text_area(:stream, :css, :class => 'body') %>
     <%= submit_tag_with_notice('save')%>
