--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -122,7 +122,7 @@ span.submit.notice {
 	margin-top: 6px;
 }
 
-.subsettings form {
+.submit_tag_with_notice {
 	clear: both;
 }
 
@@ -178,7 +178,10 @@ textarea.summary {
 }
 
 div.formError {
-	
+	background-color: #FFCFD1;
+	color: #8F2C30;
+	padding: 0.8em;
+	margin-bottom: 0.8em;
 }
 
 .heading.actions {
