Small tweaks to forgot password mechanism

--- a/app/views/mailer/forgot_password.html.erb
+++ b/app/views/mailer/forgot_password.html.erb
@@ -5,3 +5,7 @@ In case you forgot your Kakuteru password, click the following link to set a new
 
 http://<%= @stream.subdomain %>.kakuteru.com/dashboard/reset_password?token=<%= @stream.change_password_token %>
 
+Cheers!
+
+Kakuteru
+
