--- a/app/views/intro/index.html.erb
+++ b/app/views/intro/index.html.erb
@@ -33,7 +33,7 @@
   
   <div class="my_dashboard">
     <h3>My Dashboard</h3>
-    <% form_tag('/', :onsubmit => "document.location = 'http://' + $('subdomain').value + '.#{request.domain}/dashboard/'; return false;") do %>
+    <% form_tag('/', :onsubmit => "document.location = 'http://' + $('subdomain').value + '.#{KAKUTERU_DOMAIN}/dashboard/'; return false;") do %>
       <%= submit_tag('Login!', :class => 'login') %>
       <%= text_field_tag(:subdomain, '', :class => 'text') %>.kakuteru.com
     <% end %>
