--- a/app/views/assets/_asset.html.erb
+++ b/app/views/assets/_asset.html.erb
@@ -1,3 +1,3 @@
 <li class="<%= cycle('odd', 'even') %>">
-  <%= link_to_function(asset.path, "$('post_body').value = $('post_body').value + '\\n/assets/#{asset.path}\\n';") %></span>
+  <%= link_to_function(asset.path, "$('post_body').value = $('post_body').value + '\\n\\n/assets/#{asset.path}\\n';") %></span>
 </li>
