--- a/app/views/layouts/intro.html.erb
+++ b/app/views/layouts/intro.html.erb
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Kakuteru - Semantic-Web enabled Lifestreaming, Your Style.</title>
+    <title><%= @title %></title>
     <%= stylesheet_link_tag('html') %>
     <%= stylesheet_link_tag('intro') %>
     <%#= javascript_include_tag(:defaults) %>
@@ -19,7 +19,29 @@
   </head>
   
   <body>
-    <%= yield %>
-    <%= yield(:foot) %>
+    <div class="header">
+      <ul class="menu">
+        <li><%= link_to('get started', '/signup') %></li>
+        <li><%= link_to('login', '/login') %></li>
+        <li><%= link_to('about', '/about') %></li>
+      </ul>
+      <%= link_to('Kakuteru', '/', :class => 'kakuteru') %>
+    </div>
+    <div class="page <%= params[:action] %>">
+      <%= yield %>
+    </div>
+    <div class="footer">
+      <div style="float:right; margin-top: 30px">
+        <!-- AddThis Bookmark Button BEGIN -->
+        <script type="text/javascript">
+          addthis_url    = location.href;   
+          addthis_title  = document.title;  
+          addthis_pub    = 'dominiek';     
+        </script><script type="text/javascript" src="http://s7.addthis.com/js/addthis_widget.php?v=12" ></script>
+        <!-- AddThis Bookmark Button END -->
+      </div>
+      <small>Hosting provided by: </small><br/>
+      <%= link_to(image_tag('/images/slicehost.png', :width => 100), 'http://slicehost.com/') %>
+    </div>
   </body>
 </html>
