Google analytics tracker code

--- a/app/views/layouts/intro.html.erb
+++ b/app/views/layouts/intro.html.erb
@@ -42,6 +42,15 @@
       </div>
       <small>Hosting provided by: </small><br/>
       <%= link_to(image_tag('/images/slicehost.png', :width => 100), 'http://slicehost.com/') %>
+      <script type="text/javascript">
+      var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+      document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+      </script>
+      <script type="text/javascript">
+      try {
+      var pageTracker = _gat._getTracker("UA-2485654-5");
+      pageTracker._trackPageview();
+      } catch(err) {}</script>
     </div>
   </body>
 </html>
