Optimization fixes, custom HTML layout editor, Atom Activity Extensions experimentation

--- a/app/views/dashboard/login.html.erb
+++ b/app/views/dashboard/login.html.erb
@@ -5,7 +5,7 @@
   <% form_tag do %>
     <%= error_message_on(@stream, :password) %>
     <%= password_field_tag(:password) %>
-    <%= submit_tag('Remember me!') %>
+    <%= submit_tag('Log in!') %>
     <%= link_to('I lost my password', {:action => :forgot_password}, :class => 'forgot_password') %>
   <% end %>
 </div>
