--- a/app/views/streams/show.html.erb
+++ b/app/views/streams/show.html.erb
@@ -1,84 +1,6 @@
 
-<% unless params[:tag_name] %>
-  <%= render(:partial => 'posts/articles', :locals => {:articles => @stream.articles.find(:all, :limit => 4)}) %>
-  <%= render(:partial => 'posts/medias', :locals => {:media_posts => @stream.media_posts}) %>
-<% end %>
-
-<div class="stream_and_context">
-  <div class="hfeed stream">
-    <% if params[:tag_name] %>
-      <h2>Updates tagged with <%= h(params[:tag_name]) %></h2>
-    <% else %>
-      <h2>Recent Activity</h2>
-    <% end %>
-    <ul class="posts">
-      <% @posts.each do |post| 
-           next unless post.type
-        %>
-        <li class="hentry <%= post.type %>" rel="<%= post.type.pluralize %>">
-          <%= content_tag(:div, link_to(thumbnail(post), read_url(:id => post)), :class => 'icon') %>
-            <div class="entry-content body">
-              <%= render(:partial => "posts/#{post.type}", :locals => {:post => post}) %>
-            </div>
-            <div class="details">
-              <abbr class="published" title="<%= post.published_at.iso8601 %>"><%= distance_of_time_in_words_to_now(post.published_at) %> ago</abbr>
-              <% service_icon = post.service.icon_url.blank? ? '' : image_tag(post.service.icon_url, :width => '12px')+' ' %>
-              from <%= link_to("#{service_icon}#{post.service.name}", post.service.profile_url, :rel => 'me') %>
-              ·
-              <%= link_to(pluralize(0, 'comment'), read_url(:id => post) + '#disqus_thread', :rel => 'bookmark url') %>
-              <address class="hide vcard author"><a class="url fn" href="<%= @stream.blog_url %>"><%= @stream.author %></a></address>
-            </div>
-        </li>
-      <% end %>
-    </ul>
-  </div>
-  
-  <div class="tagcloud">
-    <h3>Tags</h3>
-    <% @stream.tag_counts.sort{ |t1,t2| t1.name <=> t2.name }.each do |tag| %>
-      <%= link_to(tag.name, by_tag_url(:tag_name => tag.name), :class => 'tag', :rel => 'tag')%>
-    <% end %>
-  </div>
-  
-  <div class="profiles">
-    <h3>Me elsewhere</h3>
-    <ul>
-      <% @stream.services.public.each do |service|
-        %>
-        <li><%= link_to("#{image_tag(service.icon_url)} #{service.name}", service.profile_url, :rel => 'me') %></li>
-      <% end %>
-      <li><%= link_to("#{image_tag('google.gif')} Google", "http://google.com/search?q=#{CGI.escape(@stream.author.to_s)}") %></li>
-    </ul>
-  </div>
-  
-  <% upcoming_trips = @stream.upcoming_trips %>
-  <% unless upcoming_trips.blank? %>
-    <div class="trips">
-      <h3>Upcoming travels</h3>
-      <ul>
-        <% upcoming_trips.each do |trip|
-          %>
-          <li class="trip vevent">
-            <span class="summary hide"><%= trip.destination %></span>
-            <%= link_to(trip.destination, trip.url, :class => 'location', :rel => 'url', :title => trip.description, :alt => trip.description) %>
-            <p class="description"><%= trip.description %></p>
-            <abbr class="dtstamp travel_starts_at" title="<%= trip.travel_starts_at.iso8601 %>"><%= trip.travel_starts_at.strftime("%B, ") + trip.travel_starts_at.strftime("%d").to_i.ordinalize.to_s %></abbr>
-            <abbr class="dtend travel_ends_at" title="<%= trip.travel_ends_at.iso8601 %>"></abbr>
-          </li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-  
-  <div class="stats">
-    <h3>Activity Stats</h3>
-    <%= link_to(image_tag(@stream.activity_summary_sparkline_url), statistics_url) %>
-    <%= link_to('more', statistics_url, :class => 'more') %>
-  </div>
-  
-  <%= will_paginate(@posts) if @posts.respond_to?(:total_pages) %>
-</div>
-
+<%= render_dynamic_layout %>
+ 
 <% content_for(:foot) do %>
   <%= render(:partial => 'services/enable_disqus_comments')%>
 <% end %>
