--- a/app/views/inviter/invite.html.erb
+++ b/app/views/inviter/invite.html.erb
@@ -1,20 +1,18 @@
 
-Hey there!
+<% if @invite.name.blank? %>
+Hi!
+<% else %>
+Hi <%= @invite.name%>,
+<% end %>
 
-About two months ago you signed up for an early BETA of http://kakuteru.com. You're one of the lucky few to give this service it's first spin!
+You signed up for an early BETA of Kakuteru. You're one of the lucky few to give this service it's first spin!
 
 Get started here: http://kakuteru.com?invite_code=<%= @invite.code %>
 
-( Your personal invite code is <%= @invite.code %> )
+Kakuteru is a fully customizable lifestreamer that tries to ride the waves of the ever interconnected and semantic web. Right now it uses FriendFeed as an aggregation backend, but it also provides custom integrations like for example Dopplr for your travel schedule. 
 
-------------------------
+The service is still in it's early stage, but any feedback is welcome over at http://kakuteru.uservoice.com/.
 
-Kakuteru is a fully customizable lifestreamer that tries to ride the waves of the ever interconnected and semantic web. Right now it uses FriendFeed as an aggregation backend, but it also provides custom integrations like for example Dopplr.com for your travel schedule. 
-
-Two days ago I successfully ported over http://dominiek.com to the hosted version of Kakuteru (custom domain support!). For the moment I'm limiting new registrations so that all the bugs and quirks - including scaling the service - can be solved. So your voice is of great importance! If anything is buggy or idiotic, please give a shout out at http://kakuteru.uservoice.com/.
-
-Thanks!
+Kampai! (cheers)
 
 Dominiek
-
-PS Happy holidays!
