Tweaks to invite system

--- a/app/views/inviter/invite.html.erb
+++ b/app/views/inviter/invite.html.erb
@@ -1,9 +1,5 @@
 
-<% if @invite.name.blank? %>
-Hi!
-<% else %>
-Hi <%= @invite.name%>,
-<% end %>
+<% if @invite.name.blank? %>Hi!<% else %>Hi <%= @invite.name %>,<% end %>
 
 You signed up for an early BETA of Kakuteru. You're one of the lucky few to give this service it's first spin!
 
