Win 5% Startup Ownership by making a Kick-ass Design

--- a/app/views/intro/design.html.erb
+++ b/app/views/intro/design.html.erb
@@ -38,8 +38,12 @@
         <li>The design must be implemented fully (CSS, HTML etc.) on a Kakuteru lifestream.</li>
         <li>You can submit a maximum of 2 designs.</li>
         <li>A total of at least 10 serious designs have to be submitted by the community.</li>
-        <li>Designs must be submitted <strong>before Thursday February 12th</strong> to <a href="mailto: design@kakuteru.com">design@kakuteru.com</a></li>
+        <li>Designs must be submitted <strong>before Thursday March 12th</strong> to <a href="mailto: design@kakuteru.com">design@kakuteru.com</a></li>
       </ul>
+      
+      <h2>More information</h2>
+      Kakuteru is still quite stealth and invite-only. Here is a blog post that explains a bit more about the current state and future of Kakuteru. Also, there is a nice ReadWriteWeb write-up that explains more about the service. Lastly, you can always <a href="mailto: hello@kakuteru.com">e-mail</a>.
+      
     </div>
   </body>
 
