--- a/app/views/intro/design.html.erb
+++ b/app/views/intro/design.html.erb
@@ -24,6 +24,17 @@
     </div>
     
     <div class="explanation">
+      <div class="promote">
+        <script src="http://digg.com/tools/diggthis.js" type="text/javascript"></script>
+      </div>
+      
+      <div class="addthis">
+      <!-- AddThis Button BEGIN -->
+      <script type="text/javascript">var addthis_pub="dominiek";</script>
+      <a href="http://www.addthis.com/bookmark.php" onmouseover="return addthis_open(this, '', '[URL]', '[TITLE]')" onmouseout="addthis_close()" onclick="return addthis_sendto()"><img src="http://s7.addthis.com/static/btn/lg-share-en.gif" width="125" height="16" border="0" alt="Bookmark and Share" style="border:0"/></a><script type="text/javascript" src="http://s7.addthis.com/js/152/addthis_widget.js"></script>
+      <!-- AddThis Button END -->    
+      </div>
+      
       <h2>Say what?!</h2>
       <p>Perhaps you've noticed, but <a href="http://dominiek.com/">the default theme for a Kakuteru Lifestream really sucks</a>. The power of Kakuteru lies in it's integration with other services and to make activity streams more smart. However, some really cool default themes will help Kakuteru grow. We think that's worth something.</p>
       
@@ -42,7 +53,7 @@
       </ul>
       
       <h2>More information</h2>
-      Kakuteru is still quite stealth and invite-only. Here is a blog post that explains a bit more about the current state and future of Kakuteru. Also, there is a nice ReadWriteWeb write-up that explains more about the service. Lastly, you can always <a href="mailto: hello@kakuteru.com">e-mail</a>.
+      Kakuteru is still quite stealth and invite-only. <a href="http://dominiek.com/43233-kakuteru-com-shake-that-cocktail">Here is a blog post</a> that explains a bit more about the current state and future of Kakuteru. Also, there is a nice <a href="http://www.readwriteweb.com/archives/kakuteru_a_blogging_and_lifestreaming_mashup.php">ReadWriteWeb write-up</a> that explains more about the service. Lastly, you can always <a href="mailto: hello@kakuteru.com">e-mail</a>.
       
     </div>
   </body>
